SimpleTabArea: fix background color of overflow tab
The overflow tab should have the same background-color as a non
selected simple-tab. Currently the background shines through which
is not a problem with the current theme, but if the header
has a different color or if it contains other elements normally
covered by the tab area it is unexpected.

274456

--- a/eclipse-scout-core/src/tabbox/SimpleTabArea.less
+++ b/eclipse-scout-core/src/tabbox/SimpleTabArea.less
@@ -16,8 +16,10 @@
   & > .simple-overflow-tab-item {
     border-right: 1px solid @border-color;
     display: inline-block;
-    height: 100%;
     width: 30px;
+    /* 1px smaller than the header because of the bottom border */
+    height: calc(~'100% - 1px');
+    background-color: @simple-tab-background-color;
     padding-top: @simple-overflow-tab-item-padding-top;
     text-align: center;
     cursor: pointer;
